--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ cache:
   directories:
     # local::lib caching
     - $HOME/perl5
+    - maint/cpanfile-git-log
 addons:
   apt:
     packages:
@@ -33,5 +34,5 @@ matrix:
   allow_failures:
     - perl: blead       # ignore failures for blead perl
 before_install:
-  - export DEVOPS_BRANCH="master"
+  - export DEVOPS_BRANCH="42-cpanfile-git-cache"
   - eval "$(curl https://raw.githubusercontent.com/project-renard/devops/$DEVOPS_BRANCH/script/helper.pl | perl -- | awk '/^#START/,/^#END/ { print > "/dev/stdout"; next } { print > "/dev/stderr"}' )"
