--- a/dist.ini
+++ b/dist.ini
@@ -1,21 +1,16 @@
-name    = Renard-Incunabula
+name    = Renard-Incunabula-Document
 author  = Project Renard
 license = Perl_5
 copyright_holder = Project Renard
 copyright_year   = 2017
-version = 0.003
+version = 0.004
 
 [@Author::ZMUGHAL::ProjectRenard]
 
 ; [Test::PodSpelling]
-Test::PodSpelling.stopwords[ 0] = PDF
-Test::PodSpelling.stopwords[ 1] = PNG
-; Types
-Test::PodSpelling.stopwords[ 2] = DocumentModel
-Test::PodSpelling.stopwords[ 3] = PageNumber
-Test::PodSpelling.stopwords[ 4] = LaxPageNumber
-Test::PodSpelling.stopwords[ 5] = PageCount
-Test::PodSpelling.stopwords[ 6] = ZoomLevel
-Test::PodSpelling.stopwords[ 7] = RenderableDocumentModel
-Test::PodSpelling.stopwords[ 8] = RenderablePageModel
-Test::PodSpelling.stopwords[ 9] = SizeRequest
+; Types defined
+Test::PodSpelling.stopwords[ 0] = DocumentModel
+Test::PodSpelling.stopwords[ 1] = PageNumber
+Test::PodSpelling.stopwords[ 2] = LaxPageNumber
+Test::PodSpelling.stopwords[ 3] = PageCount
+Test::PodSpelling.stopwords[ 4] = ZoomLevel
