--- a/maint/devops.yml
+++ b/maint/devops.yml
@@ -1,13 +1,8 @@
 ---
 native:
   debian:
-    packages:
-      - pkg-config
-      - libcairo2
+    packages: ~
   macos-homebrew:
-    packages:
-      - cairo
+    packages: ~
   msys2-mingw64:
-    packages:
-      - mingw-w64-x86_64-perl
-      - mingw-w64-x86_64-cairo
+    packages: ~
