--- a/META.yml
+++ b/META.yml
@@ -10,7 +10,7 @@ configure_requires:
   ExtUtils::MakeMaker: '0'
   perl: '5.010'
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 6.010, CPAN::Meta::Converter version 2.150010'
+generated_by: 'Dist::Zilla version 6.015, CPAN::Meta::Converter version 2.150010'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -20,7 +20,7 @@ requires:
   Module::Load: '0'
   Moo: '0'
   Moo::Role: '0'
-  MooX::Lsub: '0'
+  MooX::ShortHas: '0'
   Renard::Incunabula::Common::Setup: '0'
   Renard::Incunabula::Common::Types: '0'
   Type::Library: '0.008'
@@ -31,5 +31,7 @@ requires:
 resources:
   homepage: https://github.com/project-renard/p5-Renard-Incunabula-Document
   repository: https://github.com/project-renard/p5-Renard-Incunabula-Document.git
-version: '0.004'
-x_serialization_backend: 'YAML::Tiny version 1.70'
+version: '0.005'
+x_generated_by_perl: v5.26.1
+x_serialization_backend: 'YAML::Tiny version 1.73'
+x_spdx_expression: 'Artistic-1.0-Perl OR GPL-1.0-or-later'
